# SNU-Algorithmic-and-Quantitative-trading-group

./: README.md
chartrider-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  .secret.main  .secret.test  Dockerfile  README.md  alembic.ini  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
chartrider-main/.github/workflows/: deploy.yaml  project.yaml  pytest.yaml
chartrider-main/chartrider/: settings.py
chartrider-main/chartrider/analysis/: datasource.py  renderer.py  resampler.py  server.py  stat.py
chartrider-main/chartrider/analysis/js/: autoscale_callback.js  dynamic_tooltip_callback.js
chartrider-main/chartrider/backtest/: main.py
chartrider-main/chartrider/core/backtest/broker/: __init__.py  broker.py
chartrider-main/chartrider/core/backtest/execution/: builder.py  handler.py  postprocessor.py  prompt.py
chartrider-main/chartrider/core/backtest/repository/: __init__.py  repository.py
chartrider-main/chartrider/core/strategy/: base.py  presets.py  signpost.py
chartrider-main/chartrider/database/: __init__.py  base.py  connection.py
chartrider-main/chartrider/database/migrations/: env.py
chartrider-main/chartrider/indicators/: __init__.py  supertrend.py  ta.py
chartrider-main/chartrider/live/: main.py
chartrider-main/chartrider/strategies/: __init__.py  random_buy.py  rsi_multiasset.py  simple_vb.py  simple_vb_deadcross.py  simple_vbdc_cumulative.py  volatility_breakout.py
chartrider-main/chartrider/telegram/: app.py  context.py  main.py  utils.py
chartrider-main/chartrider/telegram/handlers/: __init__.py  cmd.py  env.py  error.py  io.py  register.py  run.py
chartrider-main/chartrider/tests/: conftest.py
chartrider-main/chartrider/tests/models/: test_client_order_id.py  test_symbols.py
chartrider-main/chartrider/utils/: data.py  eventloop.py  exceptions.py  exchange.py  htmlsnippets.py  log.py  prettyprint.py  profiler.py  secrets.py  symbols.py  textsanitizer.py  timeutils.py
chartrider-main/chartrider/worker/: entrypoint.py  main.py  procedures.py  rpc.py
chartrider-main/docs/: class_diagram.puml  sequence_diagram.puml
(+41 files in other folders)
